[package]
name = "volaris-cli"
version = "0.0.3"
authors = ["brxken128 <brxken128@tutanota.com>", "greendoescode <green@apolga.com>"]
readme = "README.md"
edition = "2021"
description = "Efficient, robust, and verified command-line file encryption using contemporary algorithms and a audited encryption engine."
keywords = ["encryption", "utility", "file", "command-line", "secure"]
categories = ["cryptography", "command-line-utilities"]
repository = "https://github.com/volar-is/volaris/tree/master/volaris"
homepage = "https://github.com/volar-is/volaris"
license = "BSD-2-Clause"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = "1.3.3"
rand = "0.8.5"

tools = { package = "volaris-tools", version = "0.0.3", path = "../volaris-tools" }
corecrypto = { package = "volaris-crypto", path = "../volaris-crypto", version = "0.0.3" }

clap = { version = "3.2.21", features = ["cargo"] }
anyhow = "1.0.65"

zip = { version = "0.6.3", default-features = false, features = ["zstd"] }
rpassword = "7.2"
