[package]
name = "volaris-crypto"
version = "0.0.2"
edition = "2021"
description = "The corecrypto cryptography behind Volaris"
readme = "README.md"
license = "BSD-2-Clause"
authors = ["brxken128 <brxken128@tutanota.com>", "greendoescode <green@apolga.com>"]
homepage = "https://github.com/volar-is/volaris"

[dependencies]
anyhow = "1.0.65"
aes-gcm = "0.10.1"
chacha20poly1305 = "0.10.1"
deoxys = { version = "0.1.0" }
aead = { version = "0.5.1", features = ["stream"] }
zeroize = "1.5.0"
argon2 = "0.4.1"
balloon-hash = "0.3.0"
blake3 = { version = "1.3.3", features = ["traits-preview"] }
rand = "0.8.5"
indicatif = { version = "0.16.2", optional = true }
